# coinbank

./: .env  .env.example  .gitignore  LICENSE.txt  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
accounts/: models.py  urls.py  views.py
accounts/management/commands/: createrootbankuser.py
accounts/migrations/: 0001_initial.py  0002_account_is_owned.py  0003_alter_account_options_alter_account_managers_and_more.py  0004_paymentrequest.py
coinbank/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: DepositModal.tsx  MintInfoModal.tsx  SendModal.tsx  StatsFooter.tsx  WithdrawModal.tsx
frontend/src/pages/: Create.tsx  Dashboard.tsx  Home.tsx  Login.tsx
src/: App.tsx  api.ts
src/components/: MintInfoModal.tsx
src/pages/: Wallet.tsx
