[project]
name = "coinbank"
version = "0.1.0"
description = "a customizable Bitcoin bank"
authors = [
    {name = "Jason Traub",email = "jtraub91@gmail.com"}
]
license = {text = "The Unlicense"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "python-dotenv (==1.0.1)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "cashu (>=0.18.2,<0.19.0)",
    "marshmallow (==3.25.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
